<resources>
    <string name="app_name">DySTech</string>
    <string name="menuHome">Home</string>
    <string name="menuAddArticle">Add Review</string>
    <string name="menuList">Show List</string>
    <string name="menuInfo">App Information</string>
    <string name="MainPageHeading1">Latest Reviews</string>
    <string name="AppInfoHeading">Application Information</string>
    <string name="AppInfoRatingText">Don\'t Forget to Rate!</string>
    <string name="AppVersion">DysTech v1.00</string>
    <string name="RatingSubmitButton">Submit</string>
    <string name="AppCopyright">© Dylan Sage 2016 - All Rights Reserved</string>
    <string name="AppDetails">DySTech is a Electronics Review Application. We provide our opinions on the latest and greatest technology and gadgets around.</string>
    <string name="title_activity_login">Please Sign In</string>

    <string name="Username">Username</string>
    <string name="AddArticleHeading">Add an Article</string>
    <string name="ArticleID">ID</string>
    <string name="ArticleType">Article Type</string>
    <string name="RadioReview">Review</string>
    <string name="ArticleRadio">Article</string>
    <string name="AddID">ID</string>
    <string name="AddPostDate">Date</string>
    <string name="ContentHeading">Heading</string>
    <string name="ContentMain">Main Text</string>
    <string name="ContentAuthor">Author</string>
    <string name="AddReviewScoreHeading">Review Score</string>
    <string name="ContentSubmitButton">Submit</string>
    <string name="ReviewScore" />

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_choose_add">ChooseAddActivity</string>
    <string name="AddNewArticle">Add a New Article</string>
    <string name="AddNewReview">Add a New Review</string>
    <string name="title_activity_temp">temp</string>
    <string name="AddReviewHeading">Add a Review</string>
    <string name="SearchReviewHeading">"Search for a Review"</string>
    <string name="SearchReviewContent" />
    <string name="ReviewSearchButton">Search</string>
    <string name="ChooseReviewSearch">Search For a Review</string>
    <string name="ChooseArticleSearch">Search For an Article</string>
    <string name="SearchArticleContent">Search for Article</string>
    <string name="SearchArticleHeading">Search For an Article</string>
    <string name="ArticleSearchButton">Search</string>
    <string name="ArticlePubDate">Publish Date</string>
    <string name="ReviewScoreHeading">Enter Review Score</string>
    <string name="ReviewHeading" />
    <string name="ReviewMainText" />
    <string name="ReviewAuthor" />
    <string name="ReviewPubDate">Date Published</string>
    <string name="ReviewSubmitButton">Submit</string>
    <string name="row_day">N/A</string>
    <string name="row_month" />
    <string name="row_year" />
    <string name="row_head" />
    <string name="row_main" />
    <string name="row_auth" />
    <string name="row_score" />
    <string name="menuReset">Reset</string>
</resources>
