<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AppInfoHeading"
        android:id="@+id/AppInfoHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AppInfoIcon"
        android:src="@drawable/appicon"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/AppInfoHeading"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/AppInfoIcon"
        android:layout_alignEnd="@+id/AppCopyright" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AppInfoRatingText"
        android:id="@+id/AppInfoRatingText"
        android:textColor="#000000"
        android:layout_below="@+id/ratingBar"
        android:layout_alignStart="@+id/AppInfoIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/AppVersion"
        android:id="@+id/AppVersion"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/RatingSubmitButton"
        android:id="@+id/RatingSubmitButton"
        android:layout_below="@+id/AppInfoRatingText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppCopyright"
        android:id="@+id/AppCopyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:textSize="7pt"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/AppDetails"
        android:id="@+id/textView"
        android:layout_below="@+id/RatingSubmitButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rCS"
        android:layout_below="@+id/AppInfoHeading"
        android:layout_toEndOf="@+id/AppInfoRatingText" />

</RelativeLayout>